// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttendanceKitStack - Staging Environment Staging Stack Matches Snapshot 1`] = `
{
  "Description": "DynamoDB clock table for attendance-kit (staging environment)",
  "Outputs": {
    "BackendApiApiUrlE43572B5": {
      "Description": "API Gateway URL (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-ApiUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagestagingB725B091",
            },
            "/",
          ],
        ],
      },
    },
    "BackendApiEndpointAFD87959": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagestagingB725B091",
            },
            "/",
          ],
        ],
      },
    },
    "Environment": {
      "Description": "Deployment environment",
      "Export": {
        "Name": "AttendanceKit-Staging-Environment",
      },
      "Value": "staging",
    },
    "FrontendCloudFrontUrlD7235372": {
      "Description": "CloudFront distribution URL (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-CloudFrontUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "FrontendDistributionC0C89627",
                "DomainName",
              ],
            },
          ],
        ],
      },
    },
    "GSIName": {
      "Description": "Global Secondary Index name (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-GSIName",
      },
      "Value": "DateIndex",
    },
    "TableArn": {
      "Description": "DynamoDB clock table ARN (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-ClockTableArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "ClockTable9AA4DD3D",
          "Arn",
        ],
      },
    },
    "TableName": {
      "Description": "DynamoDB clock table name (staging)",
      "Export": {
        "Name": "AttendanceKit-Staging-ClockTableName",
      },
      "Value": {
        "Ref": "ClockTable9AA4DD3D",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BackendApiANY1C8097F6": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "Type": "MOCK",
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiAccountEFEAA710": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "BackendApiC9FA6A88",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "BackendApiCloudWatchRoleCA85B02A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiApiFunction20C2BCCB": {
      "DependsOn": [
        "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "BackendApiApiFunctionServiceRoleD5027739",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Description": "Attendance Kit Backend API (staging)",
        "Environment": {
          "Variables": {
            "DYNAMODB_TABLE_NAME": {
              "Ref": "ClockTable9AA4DD3D",
            },
            "JWT_SECRET": "test-jwt-secret",
            "NODE_ENV": "staging",
          },
        },
        "FunctionName": "attendance-kit-staging-api",
        "Handler": "lambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "BackendApiApiFunctionServiceRoleD5027739",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "BackendApiApiFunctionServiceRoleD5027739": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "Roles": [
          {
            "Ref": "BackendApiApiFunctionServiceRoleD5027739",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BackendApiC9FA6A88": {
      "Properties": {
        "Description": "Attendance Kit REST API (staging)",
        "Name": "attendance-kit-staging-api",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "BackendApiCloudWatchRoleCA85B02A": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiDeployment9F8ADE10f127db43a114cf899fd5d50c9521388f": {
      "DependsOn": [
        "BackendApiproxyANY38DE49FF",
        "BackendApiproxyOPTIONSA866EA0D",
        "BackendApiproxyBBA75B2B",
        "BackendApiANY1C8097F6",
        "BackendApiOPTIONSAA9AC75A",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Attendance Kit REST API (staging)",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "BackendApiDeploymentStagestagingB725B091": {
      "DependsOn": [
        "BackendApiAccountEFEAA710",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "BackendApiDeployment9F8ADE10f127db43a114cf899fd5d50c9521388f",
        },
        "MethodSettings": [
          {
            "DataTraceEnabled": false,
            "HttpMethod": "*",
            "ResourcePath": "/*",
            "ThrottlingBurstLimit": 100,
            "ThrottlingRateLimit": 50,
          },
        ],
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
        "StageName": "staging",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "BackendApiOPTIONSAA9AC75A": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANY38DE49FF": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "BackendApiApiFunction20C2BCCB",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANYApiPermissionAttendanceKitStagingStackBackendApi0C9AF52AANYproxy1341691F": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/",
              {
                "Ref": "BackendApiDeploymentStagestagingB725B091",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyANYApiPermissionTestAttendanceKitStagingStackBackendApi0C9AF52AANYproxyEE86D160": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyBBA75B2B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "BackendApiproxyOPTIONSA866EA0D": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "ClockTable9AA4DD3D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "userId",
            "AttributeType": "S",
          },
          {
            "AttributeName": "timestamp",
            "AttributeType": "S",
          },
          {
            "AttributeName": "date",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "GlobalSecondaryIndexes": [
          {
            "IndexName": "DateIndex",
            "KeySchema": [
              {
                "AttributeName": "date",
                "KeyType": "HASH",
              },
              {
                "AttributeName": "timestamp",
                "KeyType": "RANGE",
              },
            ],
            "Projection": {
              "ProjectionType": "ALL",
            },
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "userId",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "timestamp",
            "KeyType": "RANGE",
          },
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": true,
        },
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "attendance-kit-staging-clock",
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": "Engineering",
          },
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": {
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "FrontendDeployFrontendAwsCliLayerFC92B55B",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FrontendFrontendBucket428B8C09",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FrontendFrontendBucket428B8C09",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "FrontendFrontendBucket428B8C09",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FrontendDeployFrontendAwsCliLayerFC92B55B": {
      "Properties": {
        "Content": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "FrontendDeployFrontendCustomResource5C97A869": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketName": {
          "Ref": "FrontendFrontendBucket428B8C09",
        },
        "DistributionId": {
          "Ref": "FrontendDistributionC0C89627",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
        ],
        "SourceObjectKeys": [
          "<MASKED_S3_KEY>.zip",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "FrontendDistributionC0C89627": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "CachedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "Compress": true,
              "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
              "PathPattern": "/api/*",
              "TargetOriginId": "AttendanceKitStagingStackFrontendDistributionOrigin248088943",
              "ViewerProtocolPolicy": "https-only",
            },
          ],
          "Comment": "Attendance Kit Frontend Distribution (staging)",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 300,
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            {
              "ErrorCachingMinTTL": 300,
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "CachedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "Compress": true,
            "TargetOriginId": "AttendanceKitStagingStackFrontendDistributionOrigin16DABC514",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "FrontendFrontendBucket428B8C09",
                  "RegionalDomainName",
                ],
              },
              "Id": "AttendanceKitStagingStackFrontendDistributionOrigin16DABC514",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "FrontendOAI25B05BF4",
                      },
                    ],
                  ],
                },
              },
            },
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::Select": [
                  2,
                  {
                    "Fn::Split": [
                      "/",
                      {
                        "Fn::Join": [
                          "",
                          [
                            "https://",
                            {
                              "Ref": "BackendApiC9FA6A88",
                            },
                            ".execute-api.",
                            {
                              "Ref": "AWS::Region",
                            },
                            ".",
                            {
                              "Ref": "AWS::URLSuffix",
                            },
                            "/",
                            {
                              "Ref": "BackendApiDeploymentStagestagingB725B091",
                            },
                            "/",
                          ],
                        ],
                      },
                    ],
                  },
                ],
              },
              "Id": "AttendanceKitStagingStackFrontendDistributionOrigin248088943",
              "OriginPath": {
                "Fn::Join": [
                  "",
                  [
                    "/",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Join": [
                                "",
                                [
                                  "https://",
                                  {
                                    "Ref": "BackendApiC9FA6A88",
                                  },
                                  ".execute-api.",
                                  {
                                    "Ref": "AWS::Region",
                                  },
                                  ".",
                                  {
                                    "Ref": "AWS::URLSuffix",
                                  },
                                  "/",
                                  {
                                    "Ref": "BackendApiDeploymentStagestagingB725B091",
                                  },
                                  "/",
                                ],
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                ],
              },
            },
          ],
          "PriceClass": "PriceClass_200",
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "FrontendFrontendBucket428B8C09": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "attendance-kit-staging-frontend",
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
          {
            "Key": "aws-cdk:cr-owned:c0d8e7a7",
            "Value": "true",
          },
          {
            "Key": "Environment",
            "Value": "staging",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "FrontendFrontendBucketAutoDeleteObjectsCustomResource14730577": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "FrontendFrontendBucketPolicy9C197D3C",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "FrontendFrontendBucket428B8C09",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "FrontendFrontendBucketPolicy9C197D3C": {
      "Properties": {
        "Bucket": {
          "Ref": "FrontendFrontendBucket428B8C09",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FrontendFrontendBucket428B8C09",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FrontendFrontendBucket428B8C09",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "FrontendOAI25B05BF4",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FrontendFrontendBucket428B8C09",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FrontendFrontendBucket428B8C09",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "FrontendOAI25B05BF4",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "FrontendFrontendBucket428B8C09",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "FrontendOAI25B05BF4": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "OAI for attendance-kit staging frontend",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AttendanceKitStack Stack Matches Snapshot 1`] = `
{
  "Description": "DynamoDB clock table for attendance-kit (dev environment)",
  "Outputs": {
    "BackendApiApiUrlE43572B5": {
      "Description": "API Gateway URL (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-ApiUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagedev97216E6E",
            },
            "/",
          ],
        ],
      },
    },
    "BackendApiEndpointAFD87959": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "BackendApiC9FA6A88",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "BackendApiDeploymentStagedev97216E6E",
            },
            "/",
          ],
        ],
      },
    },
    "Environment": {
      "Description": "Deployment environment",
      "Export": {
        "Name": "AttendanceKit-Dev-Environment",
      },
      "Value": "dev",
    },
    "FrontendCloudFrontUrlD7235372": {
      "Description": "CloudFront distribution URL (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-CloudFrontUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "FrontendDistributionC0C89627",
                "DomainName",
              ],
            },
          ],
        ],
      },
    },
    "GSIName": {
      "Description": "Global Secondary Index name (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-GSIName",
      },
      "Value": "DateIndex",
    },
    "TableArn": {
      "Description": "DynamoDB clock table ARN (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-ClockTableArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "ClockTable9AA4DD3D",
          "Arn",
        ],
      },
    },
    "TableName": {
      "Description": "DynamoDB clock table name (dev)",
      "Export": {
        "Name": "AttendanceKit-Dev-ClockTableName",
      },
      "Value": {
        "Ref": "ClockTable9AA4DD3D",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BackendApiANY1C8097F6": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "Type": "MOCK",
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiAccountEFEAA710": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "BackendApiC9FA6A88",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "BackendApiCloudWatchRoleCA85B02A",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiApiFunction20C2BCCB": {
      "DependsOn": [
        "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "BackendApiApiFunctionServiceRoleD5027739",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Description": "Attendance Kit Backend API (dev)",
        "Environment": {
          "Variables": {
            "DYNAMODB_TABLE_NAME": {
              "Ref": "ClockTable9AA4DD3D",
            },
            "JWT_SECRET": "test-jwt-secret",
            "NODE_ENV": "dev",
          },
        },
        "FunctionName": "attendance-kit-dev-api",
        "Handler": "lambda.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "BackendApiApiFunctionServiceRoleD5027739",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "BackendApiApiFunctionServiceRoleD5027739": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "ClockTable9AA4DD3D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "ClockTable9AA4DD3D",
                          "Arn",
                        ],
                      },
                      "/index/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BackendApiApiFunctionServiceRoleDefaultPolicy57FFCCEA",
        "Roles": [
          {
            "Ref": "BackendApiApiFunctionServiceRoleD5027739",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "BackendApiC9FA6A88": {
      "Properties": {
        "Description": "Attendance Kit REST API (dev)",
        "Name": "attendance-kit-dev-api",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "BackendApiCloudWatchRoleCA85B02A": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "BackendApiDeployment9F8ADE108e22937f52558ee5aadace76118c6cbb": {
      "DependsOn": [
        "BackendApiproxyANY38DE49FF",
        "BackendApiproxyOPTIONSA866EA0D",
        "BackendApiproxyBBA75B2B",
        "BackendApiANY1C8097F6",
        "BackendApiOPTIONSAA9AC75A",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Attendance Kit REST API (dev)",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "BackendApiDeploymentStagedev97216E6E": {
      "DependsOn": [
        "BackendApiAccountEFEAA710",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "BackendApiDeployment9F8ADE108e22937f52558ee5aadace76118c6cbb",
        },
        "MethodSettings": [
          {
            "DataTraceEnabled": false,
            "HttpMethod": "*",
            "ResourcePath": "/*",
            "ThrottlingBurstLimit": 100,
            "ThrottlingRateLimit": 50,
          },
        ],
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
        "StageName": "dev",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "BackendApiOPTIONSAA9AC75A": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANY38DE49FF": {
      "Properties": {
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "BackendApiApiFunction20C2BCCB",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "BackendApiproxyANYApiPermissionAttendanceKitDevStackBackendApi06BA8792ANYproxy7EA7FA50": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/",
              {
                "Ref": "BackendApiDeploymentStagedev97216E6E",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyANYApiPermissionTestAttendanceKitDevStackBackendApi06BA8792ANYproxy63EBFFA7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "BackendApiApiFunction20C2BCCB",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "BackendApiC9FA6A88",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "BackendApiproxyBBA75B2B": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "BackendApiC9FA6A88",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "BackendApiproxyOPTIONSA866EA0D": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'",
                "method.response.header.Access-Control-Allow-Methods": "'OPTIONS,GET,PUT,POST,DELETE,PATCH,HEAD'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "BackendApiproxyBBA75B2B",
        },
        "RestApiId": {
          "Ref": "BackendApiC9FA6A88",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "ClockTable9AA4DD3D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "userId",
            "AttributeType": "S",
          },
          {
            "AttributeName": "timestamp",
            "AttributeType": "S",
          },
          {
            "AttributeName": "date",
            "AttributeType": "S",
          },
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "GlobalSecondaryIndexes": [
          {
            "IndexName": "DateIndex",
            "KeySchema": [
              {
                "AttributeName": "date",
                "KeyType": "HASH",
              },
              {
                "AttributeName": "timestamp",
                "KeyType": "RANGE",
              },
            ],
            "Projection": {
              "ProjectionType": "ALL",
            },
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "userId",
            "KeyType": "HASH",
          },
          {
            "AttributeName": "timestamp",
            "KeyType": "RANGE",
          },
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": true,
        },
        "SSESpecification": {
          "SSEEnabled": true,
        },
        "TableName": "attendance-kit-dev-clock",
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": "Engineering",
          },
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536": {
      "DependsOn": [
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Environment": {
          "Variables": {
            "AWS_CA_BUNDLE": "/etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "FrontendDeployFrontendAwsCliLayerFC92B55B",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
            "Arn",
          ],
        },
        "Runtime": "python3.13",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FrontendFrontendBucket428B8C09",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FrontendFrontendBucket428B8C09",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:GetInvalidation",
                "cloudfront:CreateInvalidation",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRoleDefaultPolicy88902FDF",
        "Roles": [
          {
            "Ref": "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756CServiceRole89A01265",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "FrontendFrontendBucket428B8C09",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "FrontendDeployFrontendAwsCliLayerFC92B55B": {
      "Properties": {
        "Content": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "<MASKED_S3_KEY>.zip",
        },
        "Description": "/opt/awscli/aws",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "FrontendDeployFrontendCustomResource5C97A869": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DestinationBucketName": {
          "Ref": "FrontendFrontendBucket428B8C09",
        },
        "DistributionId": {
          "Ref": "FrontendDistributionC0C89627",
        },
        "DistributionPaths": [
          "/*",
        ],
        "OutputObjectKeys": true,
        "Prune": true,
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomCDKBucketDeployment8693BB64968944B69AAFB0CC9EB8756C81C01536",
            "Arn",
          ],
        },
        "SourceBucketNames": [
          {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
        ],
        "SourceObjectKeys": [
          "<MASKED_S3_KEY>.zip",
        ],
        "WaitForDistributionInvalidation": true,
      },
      "Type": "Custom::CDKBucketDeployment",
      "UpdateReplacePolicy": "Delete",
    },
    "FrontendDistributionC0C89627": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "CachedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
              ],
              "Compress": true,
              "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
              "PathPattern": "/api/*",
              "TargetOriginId": "AttendanceKitDevStackFrontendDistributionOrigin2199A450F",
              "ViewerProtocolPolicy": "https-only",
            },
          ],
          "Comment": "Attendance Kit Frontend Distribution (dev)",
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 300,
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
            {
              "ErrorCachingMinTTL": 300,
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "CachedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
            ],
            "Compress": true,
            "TargetOriginId": "AttendanceKitDevStackFrontendDistributionOrigin17D44D79F",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "FrontendFrontendBucket428B8C09",
                  "RegionalDomainName",
                ],
              },
              "Id": "AttendanceKitDevStackFrontendDistributionOrigin17D44D79F",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "FrontendOAI25B05BF4",
                      },
                    ],
                  ],
                },
              },
            },
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::Select": [
                  2,
                  {
                    "Fn::Split": [
                      "/",
                      {
                        "Fn::Join": [
                          "",
                          [
                            "https://",
                            {
                              "Ref": "BackendApiC9FA6A88",
                            },
                            ".execute-api.",
                            {
                              "Ref": "AWS::Region",
                            },
                            ".",
                            {
                              "Ref": "AWS::URLSuffix",
                            },
                            "/",
                            {
                              "Ref": "BackendApiDeploymentStagedev97216E6E",
                            },
                            "/",
                          ],
                        ],
                      },
                    ],
                  },
                ],
              },
              "Id": "AttendanceKitDevStackFrontendDistributionOrigin2199A450F",
              "OriginPath": {
                "Fn::Join": [
                  "",
                  [
                    "/",
                    {
                      "Fn::Select": [
                        3,
                        {
                          "Fn::Split": [
                            "/",
                            {
                              "Fn::Join": [
                                "",
                                [
                                  "https://",
                                  {
                                    "Ref": "BackendApiC9FA6A88",
                                  },
                                  ".execute-api.",
                                  {
                                    "Ref": "AWS::Region",
                                  },
                                  ".",
                                  {
                                    "Ref": "AWS::URLSuffix",
                                  },
                                  "/",
                                  {
                                    "Ref": "BackendApiDeploymentStagedev97216E6E",
                                  },
                                  "/",
                                ],
                              ],
                            },
                          ],
                        },
                      ],
                    },
                  ],
                ],
              },
            },
          ],
          "PriceClass": "PriceClass_200",
        },
        "Tags": [
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "FrontendFrontendBucket428B8C09": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "attendance-kit-dev-frontend",
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
          {
            "Key": "aws-cdk:cr-owned:6fea9dd5",
            "Value": "true",
          },
          {
            "Key": "Environment",
            "Value": "dev",
          },
          {
            "Key": "ManagedBy",
            "Value": "CDK",
          },
          {
            "Key": "Project",
            "Value": "attendance-kit",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "FrontendFrontendBucketAutoDeleteObjectsCustomResource14730577": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "FrontendFrontendBucketPolicy9C197D3C",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "FrontendFrontendBucket428B8C09",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "FrontendFrontendBucketPolicy9C197D3C": {
      "Properties": {
        "Bucket": {
          "Ref": "FrontendFrontendBucket428B8C09",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FrontendFrontendBucket428B8C09",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FrontendFrontendBucket428B8C09",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "FrontendOAI25B05BF4",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "FrontendFrontendBucket428B8C09",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "FrontendFrontendBucket428B8C09",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "FrontendOAI25B05BF4",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "FrontendFrontendBucket428B8C09",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "FrontendOAI25B05BF4": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "OAI for attendance-kit dev frontend",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
